fix alert on smaller screen sizes

--- a/src/contexts/styles.css
+++ b/src/contexts/styles.css
@@ -6,3 +6,9 @@
     transform: translateY(0);
   }
 }
+
+@media (max-width: 500px) {
+  .alert-modal {
+    left: 1rem;
+  }
+}
